# stack-sizes

./: Cargo.toml
src/: lib.rs
